# heart-disease-predictor

./: .dockerignore  .gitignore  Dockerfile  Final Report.docx  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
api/: __init__.py  app.py  schemas.py
artifacts/: .gitkeep
assignment_docs/: MLOps_Assignment.ipynb  README.md
data/: .gitkeep
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  SETUP.md  TECHNICAL_GUIDE.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  prometheus-servicemonitor.yaml  prometheus-values.yaml  service.yaml
logs/: .gitkeep
models/: .gitkeep
screenshots/: README.md
scripts/: deploy_k8s.sh  download_data.py  run_training.py  setup-monitoring.sh
src/: __init__.py  config.py  data_loader.py  predict.py  preprocessing.py  train.py
tests/: __init__.py  conftest.py  test_api.py  test_data_loader.py  test_model.py  test_preprocessing.py
